Bug 497276 - Can't tile native Wayland windows to left or right side (depending on the app) as first tiling action anymore
Summary: Can't tile native Wayland windows to left or right side (depending on the app...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: Quick Tiling (other bugs)
Version First Reported In: master
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-12-10 14:42 UTC by Nate Graham
Modified: 2025-03-12 08:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-12-10 14:42:11 UTC
SUMMARY
Following recent changes to tiling introduced with https://invent.kde.org/plasma/kwin/-/commit/596ce0b3a08b2fd304b809d923ff21267e25dc65, windows can't be quick-tiled to the left as the first tiling action applied to them.

STEPS TO REPRODUCE
1. Have a window that's either windowed or maximized, but *not* tiled
2. Press Meta+Left

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
The window is tiled to the left

ADDITIONAL INFORMATION
Pressing Meta+Right successfully tiles the window to the right, and in that state, Meta+Left will tile it to the left.
Comment 1 Nate Graham 2024-12-10 14:48:31 UTC
Hmm, it appears to be slightly more complex than I had first thought:
- Firefox and Thunderbird (native Wayland) can't be tiled to the left in this manner
- Discord (XWayland) works fine
- NeoChat, Elisa, Systerm Settings and Dolphin (native Wayland) can't be right-tiled in this manner

Scale factor does not appear to be a factor; reproduced at 200% scale as well as 175% scale.
Comment 2 Bug Janitor Service 2024-12-12 10:51:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6892
Comment 3 Vlad Zahorodnii 2024-12-12 16:18:04 UTC
Git commit 48768538f3d07fbc963dcb94ff09bcc834879a08 by Vlad Zahorodnii.
Committed on 12/12/2024 at 16:18.
Pushed by vladz into branch 'master'.

tiles: Set up proper quick tile tree hierarchy

When a window is moved between two quick tiles, Tile::addWindow() will
evacuate the window from the previous tile in the corresponding tree. In
order to achieve that, the addWindow() function finds the root tile and
then walks the tree.

Currently, quick tiles have no proper tile tree hierarchy setup, so the
rootTile() getter is going to fail to find the correct root tile. This
would eventually result in Window::requestedTile() getting stuck and not
being able to drag the quick tiled window.

M  +35   -36   src/tiles/quicktile.cpp
M  +8    -8    src/tiles/quicktile.h

https://invent.kde.org/plasma/kwin/-/commit/48768538f3d07fbc963dcb94ff09bcc834879a08
Comment 4 Nate Graham 2024-12-12 17:04:19 UTC
It's fully fixed for me with those changes!
Comment 5 Nate Graham 2024-12-12 17:06:40 UTC
Spoke too soon, unfortunately. I can still reproduce the issue after maximizing and de-maximizing a window multiple times. After doing that, it won't left-tile when maximized. And thereafter, after de-maximizing it, it won't left tiled when windowed either.
Comment 6 Vlad Zahorodnii 2025-02-04 12:36:51 UTC
I believe it's resolved. The relevant changes were reverted.
Comment 7 Vlad Zahorodnii 2025-03-12 08:49:51 UTC
Git commit 4cee3a31ba5853d1a34cc84caabf036385500ad7 by Vlad Zahorodnii.
Committed on 12/03/2025 at 08:35.
Pushed by vladz into branch 'master'.

Fix mutual exclusivity between maximize and quick tile mode

A window cannot be both tiled and maximized. However, this assumption
is not always true due to the maximize() function not properly evacuating
the window from the requested tile.

This change makes sure that a maximized window properly leaves its tile
and adds relevant tests.

M  +187  -0    autotests/integration/quick_tiling_test.cpp
M  +5    -6    src/window.cpp
M  +1    -1    src/window.h
M  +4    -17   src/x11window.cpp
M  +4    -2    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/4cee3a31ba5853d1a34cc84caabf036385500ad7