Fix mutual exclusivity between maximize and quick tile mode

A window cannot be both tiled and maximized. However, this assumption
is not always true due to the maximize() function not properly evacuating
the window from the requested tile.

This change makes sure that a maximized window properly leaves its tile
and adds relevant tests.

BUG: 497276